@@ -7,6 +7,7 @@ neutron (2:9.0.0~b1-1) experimental; urgency=medium
   * Added fix-requirements.txt.patch.
   * Disable auto_clean as it requires a higher version of setuptools, which
     isn't in the sbuild host for Jessie.
+  * Using testr directly, not using ./run_tests.sh anymore.
 
  -- Thomas Goirand <zigo@debian.org>  Thu, 09 Jun 2016 00:59:14 +0200
 
